--- a/css/styles.css
+++ b/css/styles.css
@@ -18,12 +18,12 @@ img {
 }
 
 body {
-    font-family: Roboto, sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: #434455;
     background-color: #FFFFFF;
 }
 
-.list {
+ul {
     list-style-type: none;
 }
 
@@ -46,17 +46,23 @@ body {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
-  }
+}
+
+/* ================== CONTAINER ========================= */
 
 .container {
     padding: 0 16px;
     margin: 0 auto;
 }
 
+.container--flex-baseline {
+    display: flex;
+    align-items: baseline;
+}
+
 @media screen and (min-width: 768px) {
     .container {
-        padding-left: 15px;
-        padding-right: 15px;
+        padding: 0 15px;
     }
 }
 
@@ -65,6 +71,8 @@ body {
         padding: 0 108px;
     }
 }
+
+
 /* ============== /COMMON STYLES ============== */
 
 /* ============== HEADER MOBILE STYLES ============== */
@@ -437,15 +445,16 @@ body {
     fill: #f4f4fd;
 }
 
+/* ================================= HERO SECTION START ================================= */
+
 .hero-page {
-    background-color: #2e2f42;
+    --hero-background-image: url('../images/dark-bg-mb.jpg');
+
     padding: 72px 0;
     max-width: 1440px;
-    margin-left: auto;
-    margin-right: auto;
-    background: rgba(17, 17, 17, 0.6);
+    margin: 0 auto;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)),
-    url('../images/dark-bg-mb.jpg');
+    var(--hero-background-image);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -454,26 +463,16 @@ body {
 .hero-text {
     color: var(--WHITE, #FFFFFF);
     text-align: center;
-    font-family: Roboto;
     font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
     line-height: 1.11;
-    letter-spacing: 0.01em;
-    width: 186px;
-    height: 160px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 48px;
+    letter-spacing: 0.02em;
+    max-width: 186px;
+    margin: 0 auto 48px;
     text-transform: capitalize;
-    padding-left: 16px;
-    padding-right: 16px;
 }
 
-.button {
-    font-family: Roboto, sans-serif;
+.hero-button {
     font-size: 16px;
-    font-style: normal;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
@@ -482,15 +481,93 @@ body {
     margin: 0 auto; 
     display: block;
     padding: 16px 32px;
-    align-items: flex-start;
-    gap: 10px;
-    min-width: 169px;
-    height: 56px;
     border: none;
     background-color: #4D5AE5;
     border-radius: 4px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
 }
+
+.hero-button:hover,
+.hero-button:focus {
+    background: var(--OCEAN, #404BBF);
+}
+
+@media screen and (min-width: 768px) {
+    .hero-page {
+        padding: 112px 0;
+    }
+
+    .hero-text {
+        max-width: 496px;
+        font-size: 56px;
+        line-height: 1.07;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .hero-page {
+        padding: 188px 0;
+    }
+}
+
+@media (min-width: 321px) and (min-resolution: 72dpi) {
+    .hero-page {
+        --hero-background-image: url(../images/dark-bg-mb.jpg)
+    }
+}
+
+@media (min-width: 321px) and (min-resolution: 150dpi) {
+    .hero-page {
+        --hero-background-image: url(../images/dark-bg-tb.jpg)
+    }
+}
+
+@media (min-width: 321px) and (min-resolution: 300dpi) {
+    .hero-page {
+        --hero-background-image: url(../images/people-office-ds.jpg)
+    }
+}
+
+@media (min-width: 769px) and (min-resolution: 72dpi) {
+    .hero-page {
+        --hero-background-image: url(../images/images/dark-bg-mb.jpg)
+    }
+}
+
+@media (min-width: 769px) and (min-resolution: 150dpi) {
+    .hero-page {
+        --hero-background-image: url(../images/dark-bg-tb.jpg)
+    }
+}
+
+@media (min-width: 769px) and (min-resolution: 300dpi) {
+    .hero-page {
+        --hero-background-image: url(../images/people-office-ds.jpg)
+    }
+}
+
+@media (max-width: 320px) and (min-resolution: 72dpi) {
+    .hero-page {
+        --hero-background-image: url(../images/dark-bg-mb.jpg)
+    }
+}
+
+@media (max-width: 320px) and (min-resolution: 150dpi) { 
+    .hero-page {
+        --hero-background-image: url(../images/dark-bg-tb.jpg)
+    }
+}
+
+@media (max-width: 320px) and (min-resolution: 300dpi) {
+    .hero-page {
+        --hero-background-image: url(../images/people-office-ds.jpg)
+    }
+}
+
+/* ================================= HERO SECTION END ================================= */
+
+/* ============================== SECTION =============================== */
 
 .section {
     padding: 96px 0;
@@ -518,165 +595,152 @@ body {
     margin-right: auto;
 }
 
-.advantages-list-div {
+/*  ================================ ADVANTAGES START ===============================  */
+
+.advantages-list {
+    display: grid;
+    row-gap: 72px;
+}
+
+.advantages-icon-wrapper {
     display: none;
 }
 
-.advantages-page-text {
-    font-weight: 700;
+.advantages-title {
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-bottom: 8px;
     text-align: center;
-    font-style: normal;
     text-transform: capitalize;
 }
 
-.sam-text {
+.advantages-caption {
     line-height: 1.5;
     letter-spacing: 0.02em;
-    font-family: Roboto;
     font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-}
-
-.advantages-text-li {
-    display: flex;
-    flex-direction: column;
-    row-gap: 24px;
-    margin-top: 96px;
-}
-
-.team-page-our {
-    background-color: #F4F4FD;
-    padding: 0;
-    margin-top: 96px;
-}
-
-.team-text {
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: #2e2f42;
-    margin-bottom: 72px;
-    padding-top: 96px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.about-team {
-    background-color: #F4F4FD;
-    display: block;  
-    flex-direction: column;
-    align-items: center;
-    width: 320px;
-    display: block;
-    flex-direction: column;
-    align-items: center;
-    gap: 72px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-/* .container-team-page-our {
-    padding-left: 28px;
-    padding-right: 28px;
-    padding-bottom: 24px;
-    width: 320px;
-} */
-
-.team-page {
-    background-color: #FFFFFF;
-    width: calc((100% - 72px) / 4);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    width: 264px;
-    border-radius: 0px 0px 4px 4px;
-    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-}
-
-.team-page-list {
-        display: grid;
-        row-gap: 72px;
-    }
-
-    @media screen and (min-width: 768px) {
-        .team-page-list {
-            grid-template-columns: repeat(2, 1fr);
-            row-gap: 64px;
-            column-gap: 24px;
-        }
-    }
-
-    @media screen and (min-width: 1158px) {
-        .team-page-list {
-            grid-template-columns: repeat(4, 1fr);
-        }
-    }
-
-    .team-page-item {
-        display: flex;
-        flex-direction: column;
-        background: #fff;
-    }
-
-    .team-page-picture {
-        display: block;
-        aspect-ratio: 264 / 260;
-    }
-
-    .team-page-image {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: center;
-    }
-
-    .team-page-wrapper {
-        padding: 32px 16px;
-        display: grid;
-        gap: 8px;
-        text-align: center;
-    }
-
-    .team-page-title {
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 1.2;
-        letter-spacing: 0.02em;
-    }
-
-    .team-page-position {
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-    }
-
-.list-portfolio {
-    display: grid;
-    row-gap: 48px;
 }
 
 @media screen and (min-width: 768px) {
-    .list-portfolio {
+    .advantages-list {
         grid-template-columns: repeat(2, 1fr);
-        row-gap: 72px;
         column-gap: 24px;
     }
 }
 
 @media screen and (min-width: 1158px) {
-    .list-portfolio {
-        grid-template-columns: repeat(3, 1fr);
-        row-gap: 48px;
+    .advantages-list {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .advantages-icon-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 24px 0;
+        margin-bottom: 8px;
+        border-radius: 4px;
+        border: 1px solid var(--LIGHT-SLATE, #8E8F99);
+        background: var(--CLOUD, #F4F4FD);
     }
 }
-/* ------------------------------------------ */
-.div-app-p {
+
+/*  ================================ ADVANTAGES END ===============================  */
+
+
+/*  ================================ TEAM-PAGE START ===============================  */
+
+.team-page-list {
+    display: grid;
+    row-gap: 72px;
+}
+
+.team-page-item {
+    display: flex;
+    flex-direction: column;
+    background: #fff;
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.team-page-picture {
+    display: block;
+    aspect-ratio: 264 / 260;
+}
+
+.team-page-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.team-page-wrapper {
+    padding: 32px 16px;
+    display: grid;
+    gap: 8px;
+    text-align: center;
+}
+
+.team-page-title {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+}
+
+.team-page-position {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+@media screen and (min-width: 768px) {
+    .team-page-list {
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 64px;
+        column-gap: 24px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .team-page-list {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+/*  ================================ TEAM-PAGE END ===============================  */
+
+/*  ================================ PORTFOLIO START ===============================  */
+
+.portfolio-list {
+    display: grid;
+    row-gap: 48px;
+}
+
+.portfolio-image-wrapper {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-picture {
+    display: block;
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 288 / 280;
+}
+
+.portfolio-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-image-text {
     position: absolute;
     top: 0;
     font-size: 16px;
@@ -691,17 +755,21 @@ body {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.div-app-p:hover {
+.portfolio-item:hover .portfolio-image-text {
     transform: translateY(0%);
-} 
+}
 
-.name-and-about-app {
-    padding: 0 16px;
+.portfolio-item:hover .portfolio-image {
+    opacity: 0;
+}
+
+.portfolio-text-wrapper {
+    padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
 }
 
-.text-app {
+.portfolio-title {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -710,49 +778,37 @@ body {
     margin-bottom: 8px;
 }
 
-.about-app {
+.portfolio-caption {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
 
-.about-app:hover {
-    transform: translateY(0%);
+@media screen and (min-width: 768px) {
+    .portfolio-list {
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 72px;
+        column-gap: 24px;
+    }
+
+    .portfolio-picture {
+        aspect-ratio: 356 / 300;
+    }
 }
 
-.list-portfolio {
-    background-color: #FFFFFF;
-    display: inline-flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 72px;
+@media screen and (min-width: 1158px) {
+    .portfolio-list {
+        grid-template-columns: repeat(3, 1fr);
+        row-gap: 48px;
+    }
+
+    .portfolio-picture {
+        aspect-ratio: 360 / 300;
+    }
 }
 
-.list-portfolio-img {
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    border: 1px solid var(--CLOUD, #F4F4FD);
-    background: var(--WHITE, #FFF);
-    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-    position: relative;
-    overflow: hidden;
-}
-
-
-.list-portfolio-img:hover {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-/* .our-portfolio-picture {
-    position: relative;
-    overflow: hidden;
-} */
-
-.list-portfolio-img:hover .div-app-p{
-    transform: translateY(0%);
-}
-
-
+/*  ================================ PORTFOLIO END ===============================  */
 
 .name, .name-text, .name-photo {
     background-color: #FFFFFF;
@@ -1084,106 +1140,6 @@ body {
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
-    .hero-page {
-        background-color: #2e2f42;
-        width: 768px;
-        /* height: 433px; */
-        padding-top: 112px;
-        padding-bottom: 204px;
-        padding-left: 0;
-        padding-right: 0;
-        max-width: 1440px;
-        margin-left: auto;
-        margin-right: auto;
-        background: rgba(17, 17, 17, 0.6);
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)),
-        url('../images/people-office.jpg');
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-    }
-    
-    .hero-text {
-        color: var(--WHITE, #FFFFFF);
-        text-align: center;
-        font-family: Roboto;
-        font-size: 56px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 1.07;
-        letter-spacing: 0.02em;
-        width: 496px;
-        height: 120px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 36px;
-        padding: 0;
-    }
-
-    .button {
-        font-family: Roboto, sans-serif;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 1.5;
-        letter-spacing: 0.04em;
-        background: var(--IRIS, #4D5AE5);
-        color: var(--WHITE, #FFF); 
-        margin: 0 auto; 
-        display: block;
-        padding: 16px 32px;
-        align-items: flex-start;
-        gap: 10px;
-        min-width: 169px;
-        height: 56px;
-        border: none;
-        background-color: #4D5AE5;
-        border-radius: 4px;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    .advantages-list-div {
-        display: none;
-    }
-    
-    .advantages-page-text {
-        text-align: start;
-        margin-bottom: 0;
-    }
-    
-    .sam-text {
-        width: 356px;
-    }
-
-    .our-portfolio-page {
-    margin-bottom: 96px;
-    height: 1516px;
-    }
-    
-    .advantages-text-li {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 72px 24px;
-        flex-wrap: wrap;
-        flex-direction: row;
-    }
-
-    .advantages-list {
-        display: flex;
-        width: 356px;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 8px;
-        width: calc((778px - 24px * 2) / 2);
-    }
-
-    .list-portfolio {
-        display: flex;
-        flex-wrap: wrap;
-        column-gap: 24px;
-        row-gap: 48px;
-    }
-    
     .list-portfolio-img {
         border: 1px solid var(--CLOUD, #F4F4FD);
     background: var(--WHITE, #FFF);
@@ -1194,11 +1150,6 @@ body {
     
     .list-portfolio-img:hover {
         box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    }
-    
-    .div-app-img {
-        position: relative;
-        overflow: hidden;
     }
     
     .list-portfolio-img:hover .div-app-p{
@@ -1586,7 +1537,6 @@ body {
     }
     
     .button {
-        font-family: Roboto, sans-serif;
         font-size: 16px;
         font-style: normal;
         font-weight: 500;
@@ -1622,59 +1572,6 @@ body {
         width: 100%;
         left: 0;
         bottom: -1px;
-    }
-    
-    button:hover,
-    button:focus {
-        background: var(--OCEAN, #404BBF);
-    }
-    
-    .hero-page {
-        background-color: #2e2f42;
-        padding: 188px 0;
-        max-width: 1440px;
-        margin-left: auto;
-        margin-right: auto;
-        background: rgba(17, 17, 17, 0.6);
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)),
-        url('../images/people-office.jpg');
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-    }
-    
-    .hero-text {
-        color: var(--WHITE, #FFFFFF);
-        text-align: center;
-        font-family: Roboto;
-        font-size: 56px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 1.07;
-        letter-spacing: 0.02em;
-        width: 496px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 48px;
-    }
-    
-    .advantages-text {
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 1.2;
-        letter-spacing: 0.02em;
-        color: #2e2f42;
-    }
-    
-    .advantages-list-div {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 112px;
-        background-color: #f4f4fd;
-        border-radius: 4px;
-        margin-bottom: 8px;
-        border: 1px solid var(--LIGHT-SLATE, #8E8F99);
     }
     
     .team-page {
@@ -1932,10 +1829,10 @@ body {
     } */
 
     
-    .advantages-list {
+    /* .advantages-list {
         width: calc((100% - 72px) / 4);
     
-    }
+    } */
     
     .our-portfolio-page {
         padding-top: 120px; 
@@ -1958,10 +1855,10 @@ body {
         box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     }
     
-    .div-app-img {
+    /* .div-app-img {
         position: relative;
         overflow: hidden;
-    }
+    } */
     
     .list-portfolio-img:hover .div-app-p{
         transform: translateY(0%);
